# scr-multi-launcher

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  scr.rs  settings.rs
