[package]
name = "scr-multi-launcher"
version = "1.0.0"
edition = "2024"
authors = ["Tb1281"]
description = "StarCraft: Remastered multi-instance launcher"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
iced = { version = "0.13.1", features = ["svg", "tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
windows = { version = "0.61.3", features = [
    "Wdk_Foundation",
    "Wdk_System_Threading",
    "Wdk_System_SystemInformation",
    "Win32_UI_Shell_Common",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
] }
